# OptiMed

./: .gitignore  environment.yml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
docs/: OptiMed Domain Glossary.docx  domain_model.drawio
docs/architechture/: overview.mmd
src/core/domain/: __init__.py  clinical.py  enums.py  info.py  kpi.py  mixins.py
src/optimed.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/optimed/adapters/anthropic_claude/: client.py
src/optimed/adapters/fhir_hapi/: repository.py
src/optimed/core/: ports.py
src/optimed/core/domain/: __init__.py  clinical.py  diagnosis.py  enums.py  info.py  kpi.py  mixins.py
tests/: conftest.py
tests/fixtures/: observations_vital.json  patient_example.json
tests/manual/: test_claude_roundtrip.py  test_hapi_fhir.py
tests/unit/: test_claude_stub.py  test_domain.py  test_hapi_repo.py
